--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@
 /dist
 /tmp
 /out-tsc
+.DS_Store
 # Only exists if Bazel was run
 /bazel-out
 
 # dependencies
-/node_modules
+node_modules
 
 # profiling files
 chrome-profiler-events*.json
@@ -34,7 +35,7 @@ speed-measure-plugin*.json
 # misc
 /.sass-cache
 /connect.lock
-/coverage
+coverage
 /libpeerconnection.log
 npm-debug.log
 yarn-error.log
@@ -44,3 +45,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+package-lock.json
