--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+      "@angular/material": "^10.0.9",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "coverage": "^0.4.1",
+    "coveralls": "^3.0.9",
+    "ng6-toastr-notifications": "^1.0.4",
+    "puppeteer": "^1.20.0",
+    "tslib": "^1.10.0"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.6",
@@ -42,5 +49,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
+
   }
+
+
 }
