bug-#(bg: travis build)

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
-    "test": "ng test",
+    "test-headless": "ng test --browsers=Chrome_without_security --code-coverage=true --watch=false",
+    "test": "ng test --code-coverage --browsers=Chrome",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
